@@ -1,0 +1,5 @@
+input-text:
+  background-color: "#000000"
+  color: "#f0f0f0"
+  font-family: "Monaco"
+  font-size: 14.0
